# fluxly

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/scripts/: compute_next_version.py
.github/workflows/: deploy.yml  docs.yml  tests.yml
cli-flags/: index.html
concepts/: index.html
demo/: index.html
docs/: cli-flags.md  concepts.md  demo.md  exceptions.md  features.md  getting-started.md  index.md  input-flags.md  people.md  resources.md
examples/: complex_workflow.md  demo_workflow.py
examples/etl_pipeline/: app.py  before_etl.py
examples/etl_pipeline/fixtures/: users.json
examples/etl_pipeline/nodes/: __init__.py
examples/etl_pipeline/nodes/extract/: execution.py  node.py  output.py
examples/etl_pipeline/nodes/load/: execution.py  node.py  output.py
examples/etl_pipeline/nodes/transform/: execution.py  node.py  output.py
examples/etl_pipeline/workflow/: builder.py  input.py
examples/structured_demo/: app.py
examples/structured_demo/cli/: app.py
examples/structured_demo/nodes/: __init__.py
examples/structured_demo/nodes/alpha/: execution.py  node.py  output.py
examples/structured_demo/nodes/beta/: execution.py  node.py  output.py
examples/structured_demo/workflow/: builder.py  input.py
exceptions/: index.html
features/: index.html
flowcli/: __init__.py  exceptions.py  status.py
flowcli/core/: exceptions.py
flowcli/core/cli/: __init__.py  generator.py  main.py
flowcli/core/docs_generator/: generator.py  utils.py
flowcli/core/node/: __init__.py  error.py  execution.py  metadata.py  node.py  output.py
flowcli/core/utils/: types.py
flowcli/core/workflow/: __init__.py  exceptions.py  execution.py  graph.py  metadata.py  output.py  utils.py  workflow.py
flowcli/node/: __init__.py
flowcli/services/: __init__.py  services.py
flowcli/services/logger/: __init__.py  logger.py
flowcli/workflow/: __init__.py
fluxcli/: __init__.py  exceptions.py  status.py
fluxcli/core/: exceptions.py
fluxcli/core/cli/: __init__.py  generator.py  main.py
fluxcli/core/docs_generator/: __init__.py  generator.py  utils.py
fluxcli/core/node/: __init__.py  error.py  execution.py  metadata.py  node.py  output.py
fluxcli/core/utils/: types.py
fluxcli/core/workflow/: __init__.py  exceptions.py  execution.py  graph.py  input.py  metadata.py  output.py  utils.py  workflow.py
fluxcli/node/: __init__.py
fluxcli/services/: __init__.py  services.py
fluxcli/services/logger/: __init__.py  config.py  logger.py
fluxcli/workflow/: __init__.py
fluxly/: __init__.py  exceptions.py  status.py
fluxly/api/: __init__.py
fluxly/core/: app.py  exceptions.py  status.py
fluxly/core/api/: handlers.py  models.py  server.py  service.py
fluxly/core/cli/: generator.py
fluxly/core/docs_generator/: generator.py  utils.py
fluxly/core/node/: __init__.py  error.py  execution.py  metadata.py  node.py
fluxly/core/utils/: consts.py  formatting.py  types.py
fluxly/core/workflow/: __init__.py  exceptions.py  execution.py  graph.py  input.py  metadata.py  models.py  output.py  utils.py  workflow.py
fluxly/node/: __init__.py
fluxly/services/: __init__.py  services.py
fluxly/services/logger/: __init__.py  logger.py
fluxly/workflow/: __init__.py
getting-started/: index.html
input-flags/: index.html
people/: index.html
resources/: index.html
search/: search_index.json
tests/unit/: test_api_server.py  test_compute_next_version.py  test_docs_generator.py  test_node_execution.py  test_node_to_node_communication.py  test_workflow_behavior.py  test_workflow_cli_behavior.py  test_workflow_execution_groups.py  test_workflow_graph.py  test_workflow_output.py
