[project]
name = "FlowCLI"
description = "a framework for building and running lightweight directed acyclic graph (DAG)-based workflows, CLI-first design"
readme = "README.md"
authors = [{ name = "Shahar Band", email = "shahar1531@gmail.com" }]
license = { text = "MIT License" }
keywords = ["framework", "pipeline", "flow", "dag", "cli", "pipeline framework", "flowcli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.10.4,<3",
    "loguru>=0.7.0",
    "diagrams>=0.23.4,<0.24",
    "typer[all]>=0.20.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }

[tool.pixi.dependencies]
python = ">=3.10"
pydantic = ">=2.10.4,<3"
loguru = "*"
diagrams = ">=0.23.4,<0.24"
typer = ">=0.12.5,<1"

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = "*"
pytest = ">=8.4.2,<9"
ruff = ">=0.14.1,<0.15"
mypy = ">=1.18.2,<2"
pre-commit = ">=4.3.0,<5"
coverage = ">=7.11.0,<8"

[tool.pixi.feature.build.dependencies]
twine = ">=6.0.1,<7"
hatch = ">=1.14.0,<2"

[tool.pixi.feature.dev.tasks]
test = "pytest ."
lint = "ruff check ."
typecheck = "mypy ."
coverage = "coverage run -m pytest && coverage report -m"

[tool.hatch.build.targets.wheel]
packages = ["flowcli"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
exclude = [
    "flowcli/core/workflow/__init__.py",
    "flowcli/core/node/__init__.py"
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
