[project]
name = "fluxly"
description = "A framework for building portable, self-contained DAG workflows decoupled from orchestration."
readme = "README.md"
authors = [{ name = "Shahar Band", email = "shahar1531@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = ["framework", "pipeline", "flow", "dag", "cli", "pipeline framework", "fluxly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.10.4,<3",
    "loguru>=0.7.0",
    "diagrams>=0.23.4,<0.24",
    "typer>=0.12.5,<1",
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/ShaharBand/fluxly"
Documentation = "https://shaharband.github.io/fluxly/"
Repository = "https://github.com/ShaharBand/fluxly"
Issues = "https://github.com/ShaharBand/fluxly/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }

[tool.pixi.dependencies]
python = ">=3.10"
pydantic = ">=2.10.4,<3"
loguru = ">=0.7.0"
diagrams = ">=0.23.4,<0.24"
typer = ">=0.12.5,<1"
fastapi = ">=0.115.0,<1"
uvicorn = ">=0.30.0,<1"

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = ">=0.0.9,<0.0.10"
pytest = ">=8.4.2,<9"
ruff = ">=0.14.1,<0.15"
mypy = ">=1.18.2,<2"
pre-commit = ">=4.3.0,<5"
coverage = ">=7.11.0,<8"
mkdocs = ">=1.6.0,<2"
mkdocs-material = ">=9.6.22,<10"

[tool.pixi.feature.build.dependencies]
twine = ">=6.0.1,<7"
hatch = ">=1.14.0,<2"
semver = ">=3.0.4,<4"

[tool.pixi.feature.dev.tasks]
test = "pytest ."
lint = "ruff check ."
typecheck = "mypy ."
coverage = "coverage run -m pytest && coverage report -m"
docs-build = "mkdocs build"
docs-serve = "mkdocs serve"
run-demo = "python -m examples.structured_demo.app"

[tool.hatch.build.targets.wheel]
packages = ["fluxly"]

[tool.hatch.version]
source = "vcs" 

[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
exclude = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["fluxly"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
pythonpath = ["."]
